# smart-invoice-chatbot

./: .gitignore  chatbot.py  ingestion.py  main.py  pyproject.toml
.chroma/: chroma.sqlite3
.chroma/aa2647fa-9e97-4f45-ac99-740a32c9070f/: index_metadata.pickle
graph/: __init__.py  consts.py  graph.py  state.py
graph/chains/: __init__.py  fallback_generation.py  generation.py  hallucination_grader.py  retrieval_grader.py
graph/nodes/: __init__.py  generate.py  generate_fallback.py  grade_documents.py  retrieve.py
